WGM-101 Fixed payment information on mobile. Changed thumbnail image size. Change page title styling. Fixed sign in mobile. Adjusted styling on PWA.

--- a/src/app/design/frontend/Scandiweb/pwa/src/app/component/ContactPage/ContactPage.style.scss
+++ b/src/app/design/frontend/Scandiweb/pwa/src/app/component/ContactPage/ContactPage.style.scss
@@ -25,7 +25,7 @@
     width: 100%;
 
     @include after-mobile {
-        font-size: 40px;
+        font-size: 30px;
 
         &::after {
             content:" STUDIO";
